src/objects/cpm__Mandate_History__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Change_Date__c</fullName>
        <label>Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Change_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cpm__Inbound_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inbound Report</label>
        <referenceTo>cpm__Inbound_Report__c</referenceTo>
        <relationshipLabel>Mandate Histories</relationshipLabel>
        <relationshipName>Mandate_Histories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Mandate__c</fullName>
        <label>Mandate</label>
        <referenceTo>cpm__Mandate__c</referenceTo>
        <relationshipLabel>Mandate Histories</relationshipLabel>
        <relationshipName>Mandate_Histories</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cpm__Original_Bank_Account_Additional__c</fullName>
        <label>Original Bank Account Additional</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Original_Bank_Account__c</fullName>
        <label>Original Bank Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Original_Creditor_Identifier__c</fullName>
        <label>Original Creditor Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mandate History</label>
    <nameField>
        <displayFormat>MH-{0}</displayFormat>
        <label>Mandate History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mandate Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>